// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Providers component > can toggle providers assets > providers list 1`] = `
[
  <li
    class="items-center p-2 rounded-md gap-x-2 bg-black-300"
  >
    <div
      class="flex items-center gap-x-2"
    >
      <div
        aria-label="LargeWindFarm"
        class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault css-1bc90xp-MuiAvatar-root"
      >
        <i
          class="fa-solid fa-utility-pole-double"
          title="LargeWindFarm-icon"
        />
      </div>
      <div>
        <h4>
          Hawk 123 kV Substation - Hands
        </h4>
        <p
          class="text-sm uppercase"
        >
          large wind farm
        </p>
        <p
          class="text-sm"
        >
          E025
        </p>
      </div>
    </div>
    <p
      class="text-sm whitespace-nowrap"
    >
      Criticality: 
      14
    </p>
    <p
      class="text-sm whitespace-nowrap"
    >
      Connection Strength: 
      3
    </p>
  </li>,
  <li
    class="items-center p-2 rounded-md gap-x-2 bg-black-300"
  >
    <div
      class="flex items-center gap-x-2"
    >
      <div
        aria-label="CoalPlantComplex"
        class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault css-1bc90xp-MuiAvatar-root"
      >
        <i
          class="fa-regular fa-bolt-lightning"
          title="CoalPlantComplex-icon"
        />
      </div>
      <div>
        <h4>
          Best Coleman Power Station
        </h4>
        <p
          class="text-sm uppercase"
        >
          coal plant complex
        </p>
        <p
          class="text-sm"
        >
          E001
        </p>
      </div>
    </div>
    <p
      class="text-sm whitespace-nowrap"
    >
      Criticality: 
      2
    </p>
    <p
      class="text-sm whitespace-nowrap"
    >
      Connection Strength: 
      3
    </p>
  </li>,
]
`;

exports[`Providers component > renders error message when one or more providers returns an error > providers with error(s) 1`] = `
[
  <li
    class="items-center p-2 rounded-md gap-x-2 bg-black-300"
  >
    <div
      class="flex items-center gap-x-2"
    >
      <div
        aria-label="LargeWindFarm"
        class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault css-1bc90xp-MuiAvatar-root"
      >
        <i
          class="fa-solid fa-utility-pole-double"
          title="LargeWindFarm-icon"
        />
      </div>
      <div>
        <h4>
          Hawk 123 kV Substation - Hands
        </h4>
        <p
          class="text-sm uppercase"
        >
          large wind farm
        </p>
        <p
          class="text-sm"
        >
          E025
        </p>
      </div>
    </div>
    <p
      class="text-sm whitespace-nowrap"
    >
      Criticality: 
      14
    </p>
    <p
      class="text-sm whitespace-nowrap"
    >
      Connection Strength: 
      3
    </p>
  </li>,
  <li
    class="p-2 bg-red-900 rounded-md"
  >
    Failed to retrieve asset information for https://www.example.com/Instruments#E001
  </li>,
]
`;
